--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -9,7 +9,7 @@
 <body>
     <h2>Upload CSV File</h2>
     <input type="file" id="fileInput">
-    <button id="uploadButton">Upload</button> <!-- Removed inline onclick -->
+    <button id="uploadButton">Upload</button>
 
     <h3>Frontend Status:</h3>
     <p>File upload is successful, and the backend is working as expected. However, due to a page refresh issue, results are not displaying correctly.</p>
